# causeme-simple-methods

./: .pre-commit-config.yaml  LICENSE.txt  README.md  methods.json  requirements.txt  setup.cfg
causemesplmthds/: __init__.py  granger.py  var.py
linearmethods/: __init__.py  var.py
tests/: test_method.py
varmethods/: __init__.py  var.py
