[metadata]
name = causeme simple methods
version = 0.0.1a1
author = Gherardo Varando
author_email = gherardo.varando@gmail.com
description = Simple CauseMe methods for causal discovery
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
license = MIT
url = https://github.com/IPL-UV/causeme-simple-methods

[options]
packages = causemesplmthds
python_requires = >=3.6
install_requires =
    numpy ==1.22.2
    statsmodel ==0.13.2

[options.entry_points]
causeme.methods =
    linear_var = causemesplmthds:linear_var
    granger2d  = causemesplmthds:granger2d
